# otus-cpp-hw-04

./: CMakeLists.txt
.github/workflows/: release.yaml
src/: CMakeLists.txt  ip_printer.h  main.cpp
test/: CMakeLists.txt  print_ip_test.cpp
